--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto iframe</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
-    
+    <main>
+        <section id="iphone">
+           
+        </section>
+
+        <section id="botaozinho">
+
+        </section>
+    </main>
 </body>
+<footer>
+    <p>Criado por Giselle Lucia para o CursoemVideo.</p>
+</footer>
 </html>
