--- a/iphone.html
+++ b/iphone.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto iframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="iphone.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
     <main>
         <section id="iphone">
-           
+           <iframe src="home.html" frameborder="0"></iframe>
         </section>
 
         <section id="botaozinho">
