--- a/iphone.html
+++ b/iphone.html
@@ -16,7 +16,7 @@
         </section>
 
         <section id="botaozinho">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="logo home"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="logo home"></a><br>
             
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="logo github"></a><br>
             
